# SSL-TLS-clientserver

./: .gitignore  CMakeLists.txt  README.md  gd_se_test.cc  makefile  ssl_client_libssl.c  ssl_server_libssl.c
certs/: ._000000000000000000190531FF000001.cer  ._000000000000000000190531FF000001.key  ._000000000000000000190531FF000002.cer  ._000000000000000000190531FF000002.key  ca.crt  server.crt  server.key
cmake/: ql.cmake
libgd/: HEngine.h  SeCrypt.h  halSciSPI.h  libSciSPIInter.h
output/: gd_se_test
